--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!-- Created By CodingNepal - www.codingnepalweb.com  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Quiz App | CodingNepal</title>
+    <title>Biology Quiz App </title>
     <link rel="stylesheet" href="style.css">
     <!-- FontAweome CDN Link for Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -22,7 +21,8 @@
             <div class="info">3. You can't select any option once time goes off.</div>
             <div class="info">4. You can't exit from the Quiz while you're playing.</div>
             <div class="info">5. You'll get points on the basis of your correct answers.</div>
-            <div class="info">6. Questions are going to be harder as you dive in, so beaware</div>
+            <div class="info">6. Textbook andar rakho or else face the conciquence</div>
+            <div class="info">7. Diffulty will increase with respect to increase in the questions</div>
         </div>
         <div class="buttons">
             <button class="quit">Exit Quiz</button>
@@ -45,6 +45,7 @@
                 <!-- Here I've inserted question from JavaScript -->
             </div>
             <div class="option_list">
+                
                 <!-- Here I've inserted options from JavaScript -->
             </div>
         </section>
@@ -61,7 +62,7 @@
     <!-- Result Box -->
     <div class="result_box">
         <div class="icon">
-            <i class="fas fa-crown"></i>
+            <i class="fas fa-microscope"></i>
         </div>
         <div class="complete_text">You've completed the Quiz!</div>
         <div class="score_text">
